--- a/app/src/main/res/layout/dialog_sortby.xml
+++ b/app/src/main/res/layout/dialog_sortby.xml
@@ -110,7 +110,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/divider2" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_apply"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
