--- a/app/src/main/res/layout/view_custom_error.xml
+++ b/app/src/main/res/layout/view_custom_error.xml
@@ -36,7 +36,7 @@
             android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
             android:textColor="?attr/colorOnSurface" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_retry"
             style="?attr/materialButtonOutlinedStyle"
             android:layout_width="wrap_content"
