--- a/app/src/main/res/layout/item_game_header.xml
+++ b/app/src/main/res/layout/item_game_header.xml
@@ -9,7 +9,7 @@
         style="@style/TextAppearance.App.LabelMedium.GameInfo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/home_name_label"
+        android:text="@string/label_home_name"
         app:layout_constraintEnd_toStartOf="@+id/textView3"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,7 +20,7 @@
         style="@style/TextAppearance.App.LabelMedium.GameInfo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/home_score_label"
+        android:text="@string/label_home_score"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
         app:layout_constraintEnd_toStartOf="@+id/textView4"
         app:layout_constraintHorizontal_bias="0.5"
@@ -31,7 +31,7 @@
         style="@style/TextAppearance.App.LabelMedium.GameInfo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/visitor_name_label"
+        android:text="@string/label_visitor_name"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
         app:layout_constraintEnd_toStartOf="@+id/textView5"
         app:layout_constraintHorizontal_bias="0.5"
@@ -42,7 +42,7 @@
         style="@style/TextAppearance.App.LabelMedium.GameInfo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/visitor_score_label"
+        android:text="@string/label_visitor_score"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
