--- a/app/src/main/res/layout/fragment_teams.xml
+++ b/app/src/main/res/layout/fragment_teams.xml
@@ -59,9 +59,8 @@
         app:layout_constraintTop_toBottomOf="@+id/view_custom_error"
         tools:listitem="@layout/item_player" />
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
+    <com.google.android.material.loadingindicator.LoadingIndicator
+        android:id="@+id/loading_indicator_teams"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
