--- a/app/src/main/res/layout/item_team_header.xml
+++ b/app/src/main/res/layout/item_team_header.xml
@@ -10,7 +10,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="2dp"
-        android:text="@string/name_label"
+        android:text="@string/label_name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/textView3"
         app:layout_constraintHorizontal_bias="0.5"
@@ -23,7 +23,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="2dp"
-        android:text="@string/city_label"
+        android:text="@string/label_city"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
         app:layout_constraintEnd_toStartOf="@+id/textView4"
         app:layout_constraintHorizontal_bias="0.5"
@@ -34,7 +34,7 @@
         style="?attr/textAppearanceLabelMedium"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/conference_label"
+        android:text="@string/label_conference"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
