--- a/app/src/main/res/layout/view_custom_error.xml
+++ b/app/src/main/res/layout/view_custom_error.xml
@@ -24,7 +24,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginEnd="12dp"
-            android:contentDescription="@string/description_illustrative_icon_for_error"
+            android:contentDescription="@string/desc_error_icon"
             android:src="@drawable/broken_basketball" />
 
         <TextView
@@ -42,7 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:text="@string/retry_label" />
+            android:text="@string/label_retry" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_close"
@@ -50,7 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:icon="@drawable/ic_cancel_24px"
-            android:contentDescription="@string/description_back" />
+            android:contentDescription="@string/desc_back" />
 
     </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
