--- a/app/src/main/res/layout/bottomsheet_games.xml
+++ b/app/src/main/res/layout/bottomsheet_games.xml
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:icon="@drawable/ic_cancel_24px"
-        android:contentDescription="@string/desc_back"
+        android:contentDescription="@string/desc_back_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
