--- a/app/src/main/res/layout/dialog_sortby.xml
+++ b/app/src/main/res/layout/dialog_sortby.xml
@@ -12,7 +12,7 @@
         app:icon="@drawable/ic_cancel_24px"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@string/desc_back" />
+        android:contentDescription="@string/desc_back_button" />
 
     <TextView
         android:id="@+id/textView7"
