--- a/app/src/main/res/layout/fragment_players.xml
+++ b/app/src/main/res/layout/fragment_players.xml
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="24dp"
-            android:text="@string/players_title"
+            android:text="@string/title_players"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
