--- a/app/src/main/res/layout/view_custom_error.xml
+++ b/app/src/main/res/layout/view_custom_error.xml
@@ -50,7 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:icon="@drawable/ic_cancel_24px"
-            android:contentDescription="@string/desc_back" />
+            android:contentDescription="@string/desc_back_button" />
 
     </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
