--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,6 +15,12 @@
         <item name="textAppearanceTitleLarge">@style/TextAppearance.App.TitleLarge</item>
         <item name="textAppearanceLabelMedium">@style/TextAppearance.App.LabelMedium</item>
         <item name="textAppearanceBodyMedium">@style/TextAppearance.App.BodyMedium</item>
+
+    </style>
+
+    <style name="Theme.NbaApp.Splash" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/md_theme_light_primary</item>
+        <item name="postSplashScreenTheme">@style/Theme.NbaApp</item>
     </style>
 
     <style name="FullScreenBottomSheetDialog" parent="Theme.Material3.DayNight.BottomSheetDialog">
