--- a/app/src/main/res/layout/item_team.xml
+++ b/app/src/main/res/layout/item_team.xml
@@ -57,5 +57,5 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/textview_col3_item"
         app:layout_constraintTop_toTopOf="@+id/textview_col3_item"
-        android:contentDescription="@string/desc_back_button" />
+        android:contentDescription="@string/desc_dismiss_games" />
 </androidx.constraintlayout.widget.ConstraintLayout>
