--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,25 +2,169 @@
 <resources>
     <color name="transparent">#00000000</color>
 
-    <!-- Light -->
-    <color name="md_theme_light_primary">#0C2340</color>
-    <color name="md_theme_light_onPrimary">#FFFFFF</color>
-    <color name="md_theme_light_secondary">#E56020</color>
-    <color name="md_theme_light_onSecondary">#FFFFFF</color>
-    <color name="md_theme_light_background">#FFFFFF</color>
-    <color name="md_theme_light_onBackground">#0C2340</color>
-    <color name="md_theme_light_surface">#F5F5F5</color>
-    <color name="md_theme_light_onSurface">#0C2340</color>
-    <color name="md_theme_light_outline">#B0BEC5</color>
-
-    <!-- Dark -->
-    <color name="md_theme_dark_primary">#90CAF9</color>
-    <color name="md_theme_dark_onPrimary">#0C2340</color>
-    <color name="md_theme_dark_secondary">#FF8C42</color>
-    <color name="md_theme_dark_onSecondary">#0C2340</color>
-    <color name="md_theme_dark_background">#0C2340</color>
-    <color name="md_theme_dark_onBackground">#FFFFFF</color>
-    <color name="md_theme_dark_surface">#1B2A47</color>
-    <color name="md_theme_dark_onSurface">#FFFFFF</color>
-    <color name="md_theme_dark_outline">#546E7A</color>
+    <color name="md_theme_primary">#405F91</color>
+    <color name="md_theme_onPrimary">#FFFFFF</color>
+    <color name="md_theme_primaryContainer">#D6E3FF</color>
+    <color name="md_theme_onPrimaryContainer">#274777</color>
+    <color name="md_theme_secondary">#904A47</color>
+    <color name="md_theme_onSecondary">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer">#FFDAD7</color>
+    <color name="md_theme_onSecondaryContainer">#733331</color>
+    <color name="md_theme_tertiary">#2C638B</color>
+    <color name="md_theme_onTertiary">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer">#CCE5FF</color>
+    <color name="md_theme_onTertiaryContainer">#074B72</color>
+    <color name="md_theme_error">#BA1A1A</color>
+    <color name="md_theme_onError">#FFFFFF</color>
+    <color name="md_theme_errorContainer">#FFDAD6</color>
+    <color name="md_theme_onErrorContainer">#93000A</color>
+    <color name="md_theme_background">#F9F9FF</color>
+    <color name="md_theme_onBackground">#191C20</color>
+    <color name="md_theme_surface">#F5FAFB</color>
+    <color name="md_theme_onSurface">#171D1E</color>
+    <color name="md_theme_surfaceVariant">#E0E2EC</color>
+    <color name="md_theme_onSurfaceVariant">#44474E</color>
+    <color name="md_theme_outline">#74777F</color>
+    <color name="md_theme_outlineVariant">#C4C6D0</color>
+    <color name="md_theme_scrim">#000000</color>
+    <color name="md_theme_inverseSurface">#2B3133</color>
+    <color name="md_theme_inverseOnSurface">#ECF2F3</color>
+    <color name="md_theme_inversePrimary">#AAC7FF</color>
+    <color name="md_theme_primaryFixed">#D6E3FF</color>
+    <color name="md_theme_onPrimaryFixed">#001B3E</color>
+    <color name="md_theme_primaryFixedDim">#AAC7FF</color>
+    <color name="md_theme_onPrimaryFixedVariant">#274777</color>
+    <color name="md_theme_secondaryFixed">#FFDAD7</color>
+    <color name="md_theme_onSecondaryFixed">#3B0809</color>
+    <color name="md_theme_secondaryFixedDim">#FFB3AE</color>
+    <color name="md_theme_onSecondaryFixedVariant">#733331</color>
+    <color name="md_theme_tertiaryFixed">#CCE5FF</color>
+    <color name="md_theme_onTertiaryFixed">#001D31</color>
+    <color name="md_theme_tertiaryFixedDim">#99CCFA</color>
+    <color name="md_theme_onTertiaryFixedVariant">#074B72</color>
+    <color name="md_theme_surfaceDim">#D5DBDC</color>
+    <color name="md_theme_surfaceBright">#F5FAFB</color>
+    <color name="md_theme_surfaceContainerLowest">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow">#EFF5F6</color>
+    <color name="md_theme_surfaceContainer">#E9EFF0</color>
+    <color name="md_theme_surfaceContainerHigh">#E3E9EA</color>
+    <color name="md_theme_surfaceContainerHighest">#DEE3E5</color>
+    <color name="md_theme_primary_mediumContrast">#123665</color>
+    <color name="md_theme_onPrimary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_primaryContainer_mediumContrast">#506DA0</color>
+    <color name="md_theme_onPrimaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondary_mediumContrast">#5E2322</color>
+    <color name="md_theme_onSecondary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer_mediumContrast">#A15855</color>
+    <color name="md_theme_onSecondaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiary_mediumContrast">#00395A</color>
+    <color name="md_theme_onTertiary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer_mediumContrast">#3D719B</color>
+    <color name="md_theme_onTertiaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_error_mediumContrast">#740006</color>
+    <color name="md_theme_onError_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_errorContainer_mediumContrast">#CF2C27</color>
+    <color name="md_theme_onErrorContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_background_mediumContrast">#F9F9FF</color>
+    <color name="md_theme_onBackground_mediumContrast">#191C20</color>
+    <color name="md_theme_surface_mediumContrast">#F5FAFB</color>
+    <color name="md_theme_onSurface_mediumContrast">#0C1213</color>
+    <color name="md_theme_surfaceVariant_mediumContrast">#E0E2EC</color>
+    <color name="md_theme_onSurfaceVariant_mediumContrast">#33363E</color>
+    <color name="md_theme_outline_mediumContrast">#4F525A</color>
+    <color name="md_theme_outlineVariant_mediumContrast">#6A6D75</color>
+    <color name="md_theme_scrim_mediumContrast">#000000</color>
+    <color name="md_theme_inverseSurface_mediumContrast">#2B3133</color>
+    <color name="md_theme_inverseOnSurface_mediumContrast">#ECF2F3</color>
+    <color name="md_theme_inversePrimary_mediumContrast">#AAC7FF</color>
+    <color name="md_theme_primaryFixed_mediumContrast">#506DA0</color>
+    <color name="md_theme_onPrimaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_primaryFixedDim_mediumContrast">#365586</color>
+    <color name="md_theme_onPrimaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixed_mediumContrast">#A15855</color>
+    <color name="md_theme_onSecondaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixedDim_mediumContrast">#84413E</color>
+    <color name="md_theme_onSecondaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixed_mediumContrast">#3D719B</color>
+    <color name="md_theme_onTertiaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixedDim_mediumContrast">#205981</color>
+    <color name="md_theme_onTertiaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceDim_mediumContrast">#C2C7C9</color>
+    <color name="md_theme_surfaceBright_mediumContrast">#F5FAFB</color>
+    <color name="md_theme_surfaceContainerLowest_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow_mediumContrast">#EFF5F6</color>
+    <color name="md_theme_surfaceContainer_mediumContrast">#E3E9EA</color>
+    <color name="md_theme_surfaceContainerHigh_mediumContrast">#D8DEDF</color>
+    <color name="md_theme_surfaceContainerHighest_mediumContrast">#CDD3D4</color>
+    <color name="md_theme_primary_highContrast">#022B5B</color>
+    <color name="md_theme_onPrimary_highContrast">#FFFFFF</color>
+    <color name="md_theme_primaryContainer_highContrast">#2A497A</color>
+    <color name="md_theme_onPrimaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondary_highContrast">#511918</color>
+    <color name="md_theme_onSecondary_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer_highContrast">#763533</color>
+    <color name="md_theme_onSecondaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiary_highContrast">#002F4B</color>
+    <color name="md_theme_onTertiary_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer_highContrast">#0D4D74</color>
+    <color name="md_theme_onTertiaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_error_highContrast">#600004</color>
+    <color name="md_theme_onError_highContrast">#FFFFFF</color>
+    <color name="md_theme_errorContainer_highContrast">#98000A</color>
+    <color name="md_theme_onErrorContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_background_highContrast">#F9F9FF</color>
+    <color name="md_theme_onBackground_highContrast">#191C20</color>
+    <color name="md_theme_surface_highContrast">#F5FAFB</color>
+    <color name="md_theme_onSurface_highContrast">#000000</color>
+    <color name="md_theme_surfaceVariant_highContrast">#E0E2EC</color>
+    <color name="md_theme_onSurfaceVariant_highContrast">#000000</color>
+    <color name="md_theme_outline_highContrast">#292C33</color>
+    <color name="md_theme_outlineVariant_highContrast">#464951</color>
+    <color name="md_theme_scrim_highContrast">#000000</color>
+    <color name="md_theme_inverseSurface_highContrast">#2B3133</color>
+    <color name="md_theme_inverseOnSurface_highContrast">#FFFFFF</color>
+    <color name="md_theme_inversePrimary_highContrast">#AAC7FF</color>
+    <color name="md_theme_primaryFixed_highContrast">#2A497A</color>
+    <color name="md_theme_onPrimaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_primaryFixedDim_highContrast">#0D3262</color>
+    <color name="md_theme_onPrimaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixed_highContrast">#763533</color>
+    <color name="md_theme_onSecondaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixedDim_highContrast">#59201E</color>
+    <color name="md_theme_onSecondaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixed_highContrast">#0D4D74</color>
+    <color name="md_theme_onTertiaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixedDim_highContrast">#003655</color>
+    <color name="md_theme_onTertiaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceDim_highContrast">#B4BABB</color>
+    <color name="md_theme_surfaceBright_highContrast">#F5FAFB</color>
+    <color name="md_theme_surfaceContainerLowest_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow_highContrast">#ECF2F3</color>
+    <color name="md_theme_surfaceContainer_highContrast">#DEE3E5</color>
+    <color name="md_theme_surfaceContainerHigh_highContrast">#CFD5D6</color>
+    <color name="md_theme_surfaceContainerHighest_highContrast">#C2C7C9</color>
+    <color name="colorCustomColor1">#2E628C</color>
+    <color name="colorOnCustomColor1">#FFFFFF</color>
+    <color name="colorCustomColor1Container">#CDE5FF</color>
+    <color name="colorOnCustomColor1Container">#0B4A72</color>
+    <color name="colorCustomColor2">#2C638B</color>
+    <color name="colorOnCustomColor2">#FFFFFF</color>
+    <color name="colorCustomColor2Container">#CCE5FF</color>
+    <color name="colorOnCustomColor2Container">#074B72</color>
+    <color name="colorCustomColor1_mediumContrast">#00395B</color>
+    <color name="colorOnCustomColor1_mediumContrast">#FFFFFF</color>
+    <color name="colorCustomColor1Container_mediumContrast">#3E719B</color>
+    <color name="colorOnCustomColor1Container_mediumContrast">#FFFFFF</color>
+    <color name="colorCustomColor2_mediumContrast">#00395A</color>
+    <color name="colorOnCustomColor2_mediumContrast">#FFFFFF</color>
+    <color name="colorCustomColor2Container_mediumContrast">#3D719B</color>
+    <color name="colorOnCustomColor2Container_mediumContrast">#FFFFFF</color>
+    <color name="colorCustomColor1_highContrast">#002F4C</color>
+    <color name="colorOnCustomColor1_highContrast">#FFFFFF</color>
+    <color name="colorCustomColor1Container_highContrast">#104D75</color>
+    <color name="colorOnCustomColor1Container_highContrast">#FFFFFF</color>
+    <color name="colorCustomColor2_highContrast">#002F4B</color>
+    <color name="colorOnCustomColor2_highContrast">#FFFFFF</color>
+    <color name="colorCustomColor2Container_highContrast">#0D4D74</color>
+    <color name="colorOnCustomColor2Container_highContrast">#FFFFFF</color>
 </resources>
