--- a/app/src/main/res/values/themes_light.xml
+++ b/app/src/main/res/values/themes_light.xml
@@ -1,6 +1,6 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.NbaApp" parent="Theme.Material3.DayNight.NoActionBar">
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+    <style name="Theme.NbaApp.Light" parent="Theme.NbaApp.Base">
         <item name="colorPrimary">@color/md_theme_primary</item>
         <item name="colorOnPrimary">@color/md_theme_onPrimary</item>
         <item name="colorPrimaryContainer">@color/md_theme_primaryContainer</item>
@@ -55,5 +55,8 @@
         <item name="colorOnCustomColor2">@color/colorOnCustomColor2</item>
         <item name="colorCustomColor2Container">@color/colorCustomColor2Container</item>
         <item name="colorOnCustomColor2Container">@color/colorOnCustomColor2Container</item>
+
+        <item name="android:statusBarColor">@color/md_theme_primary</item>
+        <item name="android:navigationBarColor">@color/md_theme_primary</item>
     </style>
 </resources>
